# Homunculus

./: Cargo.toml  README.md
src/: main.rs
src/codegen/: builder.rs  common.rs  constants.rs  context.rs  mod.rs
src/codegen/back/: write.rs
src/compiler/: mod.rs
src/compiler/ast/: ast.rs  mod.rs
src/compiler/hir/: mod.rs
src/compiler/parse/: event.rs  lexer.rs  marker.rs  mod.rs  parser.rs  parser_error.rs  sink.rs  symbol_table.rs  syntax.rs
src/compiler/parse/grammar/: expr.rs  mod.rs  statement.rs
